init: 스프린트 미션 4 - 베이스 코드 세팅